--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
-    provision_time: 3m 28s
+    provision_time: 4m 2s
+    image_size: 1724 Mb
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 4
+      - pass: 4
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-7-4
+    PS_UUID: 1428e670-7fd0-11e8-81e4-c5e154973876
+  - provision_time: 3m 28s
     image_size: 1724 Mb
     resin_os_version: 2.12.7+rev1.prod
     body: |-
