--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,30 @@
 results:
   -
-    body: >-
+    provision_time: 3m 56s
+    image_size: 1724 Mb
+    resin_os_version: 2.13.6+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.13.6+rev1.prod -> 2.13.6+rev1.prod]
+       - ✔ Image filename format
+       - ✖ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 5
+      - pass: 4
+      - fail: 1
+
+      # Fails
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+    author: null
+    timestamp: 2018-7-16
+    PS_UUID: 0815c160-8907-11e8-9df3-afa7088099ae
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✖ Resin host OS update [2.13.6+rev1.prod -> 2.13.6+rev1.prod]
