--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,37 @@
 results:
   -
-    provision_time: 3m 31s
+    body: >-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Resin host OS update [2.13.6+rev1.prod -> 2.13.6+rev1.prod]
+       - ✖ child test left in queue: t.test Image filename format
+       - ✖ child test left in queue: t.test Push a mono-container to the application
+
+
+      # Summary
+
+      - planned: 2
+
+      - pass: 1
+
+      - fail: 3
+
+
+      # Fails
+
+      ## Resin host OS update [2.13.6+rev1.prod -> 2.13.6+rev1.prod]
+          ✖ Resin host OS update [2.13.6+rev1.prod -> 2.13.6+rev1.prod]
+          undefined
+      ## child test left in queue: t.test Image filename format
+          ✖ child test left in queue: t.test Image filename format
+          undefined
+      ## child test left in queue: t.test Push a mono-container to the
+      application
+          ✖ child test left in queue: t.test Push a mono-container to the application
+          undefined
+    timestamp: 2018-7-16
+    PS_UUID: 4a2638d0-8909-11e8-8248-27cd1ea312ee
+  - provision_time: 3m 31s
     image_size: 1724 Mb
     resin_os_version: 2.13.6+rev1.prod
     body: |-
