--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 3m 22s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-24
+    PS_UUID: 3ae979f0-8f52-11e8-948b-fd062e1fedbc
+  - provision_time: 3m 22s
     image_size: 1724 Mb
     resin_os_version: 2.13.6+rev1.prod
     body: |-
