--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-7-24
+    PS_UUID: 6cbd1a30-8f53-11e8-a05e-5f4a6e9bd399
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-24
     PS_UUID: 3ae979f0-8f52-11e8-948b-fd062e1fedbc
   - provision_time: 3m 22s
     image_size: 1724 Mb
