--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-7-25
+    PS_UUID: 10233490-9056-11e8-a62a-ab8aec40405a
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-25
     PS_UUID: c441a3c0-9011-11e8-b956-275f10296305
   - body: |-
       # Tests 
