--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-7-27
+    PS_UUID: b10e2610-91b6-11e8-8cd6-737ab07abd42
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-27
     PS_UUID: 78da51a0-91b2-11e8-bbe8-adf68ddc2955
   - body: |-
       # Tests 
