--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-7-30
+    PS_UUID: 4f714210-9405-11e8-81ea-af25ba2d68ec
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-30
     PS_UUID: 33b89b00-93ff-11e8-a995-c768382ceef6
   - body: |-
       # Tests 
