--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-7-30
+    PS_UUID: 72645b40-940f-11e8-846e-4d38e0b1078d
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-30
     PS_UUID: 4f714210-9405-11e8-81ea-af25ba2d68ec
   - body: |-
       # Tests 
