--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-7-30
+    PS_UUID: 8150cb60-9415-11e8-8543-01d9b8e9ec40
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-30
     PS_UUID: 1d854bf0-9411-11e8-99cd-13084bb4a94c
   - body: |-
       # Tests 
