--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-8-2
+    PS_UUID: b97f2690-9653-11e8-a518-3339399004c4
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-7-30
     PS_UUID: 9bcd9e70-9418-11e8-9b1b-a3495a014fec
   - body: |-
