--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-2
+    PS_UUID: 51461a30-9657-11e8-922c-815fb5d7602e
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-2
     PS_UUID: b3a578c0-9656-11e8-a40e-896d7225fcb0
   - body: |-
       # Tests 
