--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-8-3
+    PS_UUID: 718ce9f0-9723-11e8-b1ed-1b021b38172b
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-8-2
     PS_UUID: ddb718a0-9659-11e8-88f1-4fffdb048c16
   - body: |-
