--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-8-14
+    PS_UUID: ee94eb60-9fc9-11e8-bb3e-438c73c2a0aa
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-8-10
     PS_UUID: 4a5a8b40-9cbd-11e8-ae1b-252e1a77125a
   - body: |-
