--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-17
+    PS_UUID: 69d05ec0-a210-11e8-9b40-2bee18aea48b
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-17
     PS_UUID: 2a908190-a210-11e8-a864-93383c5a72e3
   - body: |-
       # Tests 
