--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-17
+    PS_UUID: 838cd290-a214-11e8-8fd5-7fdaf05c9cb6
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-17
     PS_UUID: 69d05ec0-a210-11e8-9b40-2bee18aea48b
   - body: |-
       # Tests 
