--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-8-20
+    PS_UUID: a0585c20-a47e-11e8-ab83-f97f669d6f94
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-8-17
     PS_UUID: 838cd290-a214-11e8-8fd5-7fdaf05c9cb6
   - body: |-
