--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-20
+    PS_UUID: 4a514790-a480-11e8-8233-cd8d790419a9
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-20
     PS_UUID: 57a0fbd0-a47f-11e8-b018-836636bef667
   - body: |-
       # Tests 
