--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-8-21
+    PS_UUID: 3d034a80-a551-11e8-9920-87e18d6ad96a
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-8-20
     PS_UUID: 458c9e20-a481-11e8-9a87-6d73526f400e
   - body: |-
