--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-21
+    PS_UUID: 5aa15030-a553-11e8-9a75-27110bedea5c
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-21
     PS_UUID: 3d034a80-a551-11e8-9920-87e18d6ad96a
   - body: |-
       # Tests 
