--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-24
+    PS_UUID: 251728b0-a7a4-11e8-90aa-f354cb880520
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-24
     PS_UUID: 4cd9dbe0-a76d-11e8-836b-612322dbc072
   - body: |-
       # Tests 
