--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-24
+    PS_UUID: 97a4d0c0-a7aa-11e8-b4bc-dd0700b6b028
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-24
     PS_UUID: cc098ae0-a7a5-11e8-9e59-6bc0ec12aebc
   - body: |-
       # Tests 
