--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-8-31
+    PS_UUID: 6252a9f0-ad00-11e8-a973-d9f5ac11077d
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-8-30
     PS_UUID: c12848f0-ac64-11e8-aaba-5ff71d3cc9a0
   - body: |-
