--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "data-store": "^3.0.0",
     "drivelist": "^5.0.22",
     "etcher-image-write": "^9.1.3",
+    "firmata": "^0.19.1",
     "fs-extra": "^3.0.1",
     "indent-string": "^3.2.0",
     "inquirer": "^5.1.0",
