--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-31
+    PS_UUID: 137859a0-ad0b-11e8-816c-efa5ae7bfaee
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-31
     PS_UUID: 6252a9f0-ad00-11e8-a973-d9f5ac11077d
   - body: |-
       # Tests 
