--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-8-31
+    PS_UUID: a4627df0-ad2a-11e8-9c18-17973a166643
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-8-31
     PS_UUID: 55e09ff0-ad0b-11e8-87ff-9128739d0ff6
   - body: |-
       # Tests 
