Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-3
+    PS_UUID: 41134950-af69-11e8-acad-bbc1c960c0f6
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-2
     PS_UUID: ceb7c520-aeaf-11e8-8b13-43cb6acbca63
   - body: |-
