--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-9-3
+    PS_UUID: 06e64be0-af84-11e8-87f5-af34906aba73
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-9-3
     PS_UUID: 41134950-af69-11e8-acad-bbc1c960c0f6
   - body: |-
       # Tests 
