Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-4
+    PS_UUID: 01759e60-b05e-11e8-92ec-bf6981f757a9
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-3
     PS_UUID: 06e64be0-af84-11e8-87f5-af34906aba73
   - body: |-
