--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-9-4
+    PS_UUID: 3d53b2f0-b05e-11e8-833d-814ef778f597
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-9-4
     PS_UUID: 01759e60-b05e-11e8-92ec-bf6981f757a9
   - body: |-
       # Tests 
