--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-9-5
+    PS_UUID: cad616c0-b123-11e8-a624-9f35ec11c24c
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-9-5
     PS_UUID: f3fe7b00-b119-11e8-8d8e-af0f567349c0
   - body: |-
       # Tests 
