Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-6
+    PS_UUID: c631c320-b1bf-11e8-af3f-e5077737f6b9
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-5
     PS_UUID: 62b0e7e0-b124-11e8-9973-2f4d4ba695c2
   - body: |-
