--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-9-6
+    PS_UUID: 35674e40-b1c0-11e8-a971-edacb009c264
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-9-6
     PS_UUID: c631c320-b1bf-11e8-af3f-e5077737f6b9
   - body: |-
       # Tests 
