--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-7
+    PS_UUID: c2e87590-b2b1-11e8-8370-7d297e46fe9f
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-6
     PS_UUID: 2e80d010-b1de-11e8-bc22-3ff44c29849b
   - body: |-
