--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-10
+    PS_UUID: 6cdda790-b510-11e8-827e-474f26755f5b
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-7
     PS_UUID: c2e87590-b2b1-11e8-8370-7d297e46fe9f
   - body: |-
