--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-9-11
+    PS_UUID: d22a9e30-b5d5-11e8-9824-612b6d39c763
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-9-11
     PS_UUID: 32899280-b5cd-11e8-8f03-89a7d4e67117
   - body: |-
       # Tests 
