Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-12
+    PS_UUID: 4814b640-b661-11e8-8a25-710c072b19af
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-11
     PS_UUID: d22a9e30-b5d5-11e8-9824-612b6d39c763
   - body: |-
