Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-14
+    PS_UUID: 3c21f800-b825-11e8-bfc4-f397a7599b30
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-12
     PS_UUID: 27cb4630-b68c-11e8-8f61-a3169302a647
   - body: |-
