--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-18
+    PS_UUID: 475a7180-bb44-11e8-910d-595b03778fc7
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-14
     PS_UUID: 3c21f800-b825-11e8-bfc4-f397a7599b30
   - body: |-
