Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-9-20
+    PS_UUID: e70e3200-bce5-11e8-a5df-eb3978e1defd
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-18
     PS_UUID: 475a7180-bb44-11e8-910d-595b03778fc7
   - body: |-
