--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-9-20
+    PS_UUID: 3652b4d0-bce6-11e8-9ec8-a1d4d5ca287b
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-9-20
     PS_UUID: e70e3200-bce5-11e8-a5df-eb3978e1defd
   - body: |-
       # Tests 
