Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-10-1
+    PS_UUID: 5ac18a20-c557-11e8-9bb5-6b5ee2c65a57
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-9-20
     PS_UUID: 3652b4d0-bce6-11e8-9ec8-a1d4d5ca287b
   - body: |-
