--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-10-1
+    PS_UUID: fd4199e0-c55f-11e8-a741-e1bba2ee1689
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-10-1
     PS_UUID: 5ac18a20-c557-11e8-9bb5-6b5ee2c65a57
   - body: |-
       # Tests 
