Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,18 @@ results:
       - fail: 0
 
       # Fails
+    timestamp: 2018-10-2
+    PS_UUID: 99401ad0-c662-11e8-bafa-e1f61bdb07ef
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
     timestamp: 2018-10-1
     PS_UUID: fd4199e0-c55f-11e8-a741-e1bba2ee1689
   - body: |-
