--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,33 @@
 results:
   -
-    provision_time: 1m 32s
+    provision_time: 1m 5s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✖ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 5
+      - pass: 3
+      - fail: 2
+
+      # Fails
+      ## Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          undefined
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: 9a19d120-c7a3-11e8-a19f-b5155ffd45fc
+  - provision_time: 1m 32s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
