Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -7,6 +7,30 @@ results:
       # Tests 
        - ✔ Device is online
        - ✔ Device reported hostOS version
+       - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 5
+      - pass: 4
+      - fail: 1
+
+      # Fails
+      ## Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          undefined
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: 7ae5e000-c7df-11e8-ba0e-2799619d811b
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
        - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
        - ✔ Image filename format
        - ✔ Push a mono-container to the application
