Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -7,6 +7,27 @@ results:
       # Tests 
        - ✔ Device is online
        - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 5
+      - pass: 5
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: 46e785a0-c7e0-11e8-9c9c-e7296b6d46fb
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
        - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
        - ✔ Image filename format
        - ✔ Push a mono-container to the application
