--- a/results.yaml
+++ b/results.yaml
@@ -7,6 +7,33 @@ results:
       # Tests 
        - ✔ Device is online
        - ✔ Device reported hostOS version
+       - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✖ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 5
+      - pass: 3
+      - fail: 2
+
+      # Fails
+      ## Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          undefined
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: a6599600-c7e4-11e8-9b95-85a9ee189a37
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
        - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
        - ✔ Image filename format
        - ✔ Push a mono-container to the application
