--- a/results.yaml
+++ b/results.yaml
@@ -7,6 +7,28 @@ results:
       # Tests 
        - ✔ Device is online
        - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
+
+
+      # Summary
+      - planned: 6
+      - pass: 6
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: 0f12dca0-c7e6-11e8-b555-2bbf881761dc
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
        - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
        - ✔ Image filename format
        - ✖ Push a mono-container to the application
