--- a/results.yaml
+++ b/results.yaml
@@ -10,6 +10,30 @@ results:
        - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
        - ✔ Image filename format
        - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 5
+      - pass: 4
+      - fail: 1
+
+      # Fails
+      ## Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          undefined
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: 3397ee30-c7f5-11e8-b6a4-11eea4e04bd9
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
        - ✔ Push a multi-container application
 
 
