--- a/results.yaml
+++ b/results.yaml
@@ -23,6 +23,30 @@ results:
           undefined
     author: null
     timestamp: 2018-10-4
+    PS_UUID: 15eaed00-c7f6-11e8-a0c8-c3f138500055
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 5
+      - pass: 4
+      - fail: 1
+
+      # Fails
+      ## Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          undefined
+    author: null
+    timestamp: 2018-10-4
     PS_UUID: 3397ee30-c7f5-11e8-b6a4-11eea4e04bd9
   - provision_time: 1m 7s
     image_size: 1724 Mb
