--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,37 @@
 results:
   -
-    provision_time: 1m 7s
+    provision_time: 1m 1s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✖ Push a mono-container to the application
+       - ✖ Push a multi-container application
+
+
+      # Summary
+      - planned: 6
+      - pass: 3
+      - fail: 3
+
+      # Fails
+      ## Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          ✖ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+          undefined
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+      ## Push a multi-container application
+          ✖ Push a multi-container application
+          undefined
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: 954fb8c0-c80d-11e8-a735-572a41b81b36
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
