Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,29 @@ results:
        - ✔ Image filename format
        - ✔ Push a mono-container to the application
        - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+
+
+      # Summary
+      - planned: 7
+      - pass: 7
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-10-4
+    PS_UUID: 0552d4a0-c830-11e8-a0e7-a77fc20e4764
+  - provision_time: 1m 7s
+    image_size: 1724 Mb
+    resin_os_version: 2.19.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Resin host OS update [2.19.0+rev1.prod -> 2.19.0+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+       - ✔ Push a multi-container application
        - ✔ Reload supervisor on a running device
 
 
