Automate resin sync test
This test uses the remote sync ability provided by `resin-sync`

Change-type: patch
Signed-off-by: Theodor Gherzan <theodor@resin.io>

--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "pensieve-sdk": "^1.0.0",
     "progress-stream": "^2.0.0",
     "randomstring": "^1.1.5",
+    "request-promise": "^4.2.2",
     "resin-cli-visuals": "^1.4.0",
     "resin-image-fs": "^4.0.2",
     "resin-semver": "^1.4.0",
+    "balena-sync": "^10.0.0",
     "simple-git": "^1.85.0",
     "ssh-keygen": "^0.4.1",
     "string-to-stream": "^1.1.1",
