--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 7s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-10-10'
+    PS_UUID: 4eb205c0-cca5-11e8-baeb-63a09c56bd04
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     resin_os_version: 2.19.0+rev1.prod
     body: |-
